test_case/rust-lang_rust/33418_447633469_1.rs
rust
trait Tr: Send + !Sized {} //~ ERROR Negative trait bounds are not supported
